--- a/cpp02/ex02/Makefile
+++ b/cpp02/ex02/Makefile
@@ -21,7 +21,7 @@ $(NAME) : $(OBJDIR)
 
 obj/%.o : src/%.cpp $(INCLUDES) Makefile
 	mkdir -p obj
-	$(CC) -c $< -I includes $(CFLAGS) -o $@
+	$(CC) -c $< -I includes $(CPPFLAGS) -o $@
 
 clean :
 	$(RM) $(OBJDIR)
