--- a/cpp07/ex02/Makefile
+++ b/cpp07/ex02/Makefile
@@ -2,7 +2,7 @@ CC = c++
 
 NAME := Array
 
-CPPFLAGS := -Wall -Wextra -Werror -std=c++98
+CPPFLAGS := -Wall -Wextra -Werror -std=c++98 -g
 
 SRCS := main.cpp
 
